tests/NormalTests/paczka1/fuzzy1/50115637.err
Error in line 7: S956 A533 22,8
Error in line 9: 5GO A95 14,68
Error in line 8: S956 S956 2,9
Error in line 11: S956 A95 54,5
Error in line 14: S956 S956 2,7
Error in line 6: eFgNjg S956 65,5
Error in line 17: VP8 A533 28,1
Error in line 22: gJL31pui8 S956 24,2
Error in line 30: gJL31pui8 A533 91,7
Error in line 34: 5GO A533 88,5
Error in line 39: AGDt0S A57 4@,4
